feat: add zone monsters api
